updating validation on registration

--- a/views/login.html
+++ b/views/login.html
@@ -48,7 +48,7 @@
                     <label for="password">Password:</label>
                     <input id="password" class="form-control">
                 </div>
-                <button id="login-btn" class="btn-dark" type="submit" action="post">Login</button>
+                <input id="login-btn" class="btn-dark" type="submit" value="Login">
             </form>
         </div>
     </div>
