--- a/views/home.html
+++ b/views/home.html
@@ -26,116 +26,138 @@
     <!--    <div id="day-plans" class="d-flex flex-column flex-sm-row justify-content-around align-items-sm-start mt-5">-->
     <div id="day-plans" class="mt-5">
 
-        <div id="today">
-            <div class="card">
-                <div class="card-header">
-                    <h2>Today</h2>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Curls</li>
-                    <li class="list-group-item">Bench press</li>
-                    <li class="list-group-item">Running</li>
-                </ul>
-                <div class="card-body text-center">
-                    <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
-                       data-day="Today">➕</a>
+        <repeat group="{{ @daysOfWeek }}" value="{{ @currDayOfWeek }}" counter="{{ @ctr }}">
+
+<!--           <div id="{{ strtolower(str_replace(' ', '-', @currDayOfWeek)) }}">-->
+                <div id="day-{{ @ctr - 1 }}">
+                <div class="card">
+                    <div class="card-header">
+                        <h2>{{ @currDayOfWeek }}</h2>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Curls</li>
+                        <li class="list-group-item">Bench press</li>
+                        <li class="list-group-item">Running</li>
+                    </ul>
+                    <div class="card-body text-center">
+                        <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
+                           data-day="{{ @currDayOfWeek }}">➕</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div id="yesterday">
-            <div class="card">
-                <div class="card-header">
-                    <h2>Yesterday</h2>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Squats</li>
-                </ul>
-                <div class="card-body text-center">
-                    <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
-                       data-day="Yesterday">➕</a>
-                </div>
-            </div>
-        </div>
+        </repeat>
 
-        <div id="two-days">
-            <div class="card">
-                <div class="card-header">
-                    <h2>2 Days Ago</h2>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Military press</li>
-                    <li class="list-group-item">Rowing</li>
-                    <li class="list-group-item">Sit ups</li>
-                </ul>
-                <div class="card-body text-center">
-                    <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
-                       data-day="2 Days Ago">➕</a>
-                </div>
-            </div>
-        </div>
+<!--        <div id="today">-->
+<!--            <div class="card">-->
+<!--                <div class="card-header">-->
+<!--                    <h2>Today</h2>-->
+<!--                </div>-->
+<!--                <ul class="list-group list-group-flush">-->
+<!--                    <li class="list-group-item">Curls</li>-->
+<!--                    <li class="list-group-item">Bench press</li>-->
+<!--                    <li class="list-group-item">Running</li>-->
+<!--                </ul>-->
+<!--                <div class="card-body text-center">-->
+<!--                    <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"-->
+<!--                       data-day="Today">➕</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <div id="three-days">
-            <div class="card">
-                <div class="card-header">
-                    <h2>3 Days Ago</h2>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Jogging</li>
-                </ul>
-                <div class="card-body text-center">
-                    <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
-                       data-day="3 Days Ago">➕</a>
-                </div>
-            </div>
-        </div>
+<!--        <div id="yesterday">-->
+<!--            <div class="card">-->
+<!--                <div class="card-header">-->
+<!--                    <h2>Yesterday</h2>-->
+<!--                </div>-->
+<!--                <ul class="list-group list-group-flush">-->
+<!--                    <li class="list-group-item">Squats</li>-->
+<!--                </ul>-->
+<!--                <div class="card-body text-center">-->
+<!--                    <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"-->
+<!--                       data-day="Yesterday">➕</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <div id="four-days">
-            <div class="card">
-                <div class="card-header">
-                    <h2>4 Days Ago</h2>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Push ups</li>
-                </ul>
-                <div class="card-body text-center">
-                    <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
-                       data-day="4 Days Ago">➕</a>
-                </div>
-            </div>
-        </div>
+<!--        <div id="two-days">-->
+<!--            <div class="card">-->
+<!--                <div class="card-header">-->
+<!--                    <h2>2 Days Ago</h2>-->
+<!--                </div>-->
+<!--                <ul class="list-group list-group-flush">-->
+<!--                    <li class="list-group-item">Military press</li>-->
+<!--                    <li class="list-group-item">Rowing</li>-->
+<!--                    <li class="list-group-item">Sit ups</li>-->
+<!--                </ul>-->
+<!--                <div class="card-body text-center">-->
+<!--                    <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"-->
+<!--                       data-day="2 Days Ago">➕</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <div id="five-days">
-            <div class="card">
-                <div class="card-header">
-                    <h2>5 Days Ago</h2>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Lunges</li>
-                    <li class="list-group-item">Squats</li>
-                    <li class="list-group-item">Cleans</li>
-                </ul>
-                <div class="card-body text-center">
-                    <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
-                       data-day="Saturday">➕</a>
-                </div>
-            </div>
-        </div>
+<!--        <div id="three-days">-->
+<!--            <div class="card">-->
+<!--                <div class="card-header">-->
+<!--                    <h2>3 Days Ago</h2>-->
+<!--                </div>-->
+<!--                <ul class="list-group list-group-flush">-->
+<!--                    <li class="list-group-item">Jogging</li>-->
+<!--                </ul>-->
+<!--                <div class="card-body text-center">-->
+<!--                    <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"-->
+<!--                       data-day="3 Days Ago">➕</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <div id="six-days">
-            <div class="card">
-                <div class="card-header">
-                    <h2>6 Days Ago</h2>
-                </div>
-                <ul class="list-group list-group-flush">
+<!--        <div id="four-days">-->
+<!--            <div class="card">-->
+<!--                <div class="card-header">-->
+<!--                    <h2>4 Days Ago</h2>-->
+<!--                </div>-->
+<!--                <ul class="list-group list-group-flush">-->
+<!--                    <li class="list-group-item">Push ups</li>-->
+<!--                </ul>-->
+<!--                <div class="card-body text-center">-->
+<!--                    <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"-->
+<!--                       data-day="4 Days Ago">➕</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
-                </ul>
-                <div class="card-body text-center">
-                    <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"
-                       data-day="6 Days Ago">➕</a>
-                </div>
-            </div>
-        </div>
+<!--        <div id="five-days">-->
+<!--            <div class="card">-->
+<!--                <div class="card-header">-->
+<!--                    <h2>5 Days Ago</h2>-->
+<!--                </div>-->
+<!--                <ul class="list-group list-group-flush">-->
+<!--                    <li class="list-group-item">Lunges</li>-->
+<!--                    <li class="list-group-item">Squats</li>-->
+<!--                    <li class="list-group-item">Cleans</li>-->
+<!--                </ul>-->
+<!--                <div class="card-body text-center">-->
+<!--                    <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"-->
+<!--                       data-day="Saturday">➕</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+
+<!--        <div id="six-days">-->
+<!--            <div class="card">-->
+<!--                <div class="card-header">-->
+<!--                    <h2>6 Days Ago</h2>-->
+<!--                </div>-->
+<!--                <ul class="list-group list-group-flush">-->
+
+<!--                </ul>-->
+<!--                <div class="card-body text-center">-->
+<!--                    <a href="#" class="btn btn-primary rounded-circle" data-toggle="modal" data-target="#add-workout"-->
+<!--                       data-day="6 Days Ago">➕</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
     </div>
 
     <!-- Add Workout Modal -->
@@ -150,6 +172,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="d-flex justify-content-around">
+
                         <button class="muscle-group btn btn-outline-primary">All</button>
                         <repeat group="{{ @muscleGroups }}" value="{{ @currMuscleGroup }}">
                             <button class="muscle-group btn btn-outline-primary">
@@ -157,18 +180,17 @@
                             </button>
                         </repeat>
 
-<!--                        <button class="muscle-group btn btn-outline-primary">Arms</button>-->
-<!--                        <button class="muscle-group btn btn-outline-primary">Legs</button>-->
-<!--                        <button class="muscle-group btn btn-outline-primary">Core</button>-->
                     </div>
                     <hr>
                     <div id="workout-options">
+
                         <repeat group="{{ @workouts }}" value="{{ @currWorkout }}">
                             <button class="workout btn btn-secondary btn-sm"
                                     data-muscle-groups='{{ @workoutMuscleGroups[@currWorkout["workout_id"]] }}'>
                                 {{ @currWorkout['workout_name'] }}
                             </button>
                         </repeat>
+
                     </div>
                 </div>
                 <div class="modal-footer">
