--- a/views/registration.html
+++ b/views/registration.html
@@ -26,7 +26,7 @@
         <div class="col-3"></div>
         <div id="form-div" class="col-4">
 
-            <!-- Formatted Username input field -->
+            <!-- Form -->
             <form id="formatted-login" method="post" action="#">
                 <!-- first name -->
                 <div class="form-group">
@@ -75,7 +75,7 @@
                 </div>
 
                 <!-- submit button -->
-                <input id="login-btn" class="btn-dark" type="submit" value="Register">
+                <input id="register-btn" class="btn-dark" type="submit" value="Register">
             </form>
         </div>
     </div>
