--- a/views/footer.html
+++ b/views/footer.html
@@ -19,5 +19,6 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     <script src="js/home.js"></script>
+    <script src="model/toggle.js"></script>
 </body>
 </html>
