css of login and registration updated

--- a/styles/login_register_styles.css
+++ b/styles/login_register_styles.css
@@ -37,4 +37,8 @@ p {
     body {
         background-image: url("../images/freeWeights2.jpg");
     }
+
+    .spacers {
+        display: none;
+    }
 }
