--- a/views/login.html
+++ b/views/login.html
@@ -20,12 +20,12 @@
     <link rel="stylesheet" href="styles/login_register_styles.css">
     <title>Workout Tracker Login</title>
 </head>
-<body>
+<body class="pl-5 pt-5 pb-5 pr-4">
     <!-- body content -->
     <div id="body-div" class="container row">
-        <div class="col-3"></div>
-        <div id="form-div" class="col-4">
+        <div class="spacers col-3"></div>
 
+        <div id="form-div" class="col-sm-12 col-md-6">
             <!-- Formatted Username input field -->
             <form id="formatted-login" method="post" action="#">
                 <!-- username -->
@@ -53,6 +53,8 @@
                 <input id="login-btn" class="btn-dark" type="submit" value="Login">
             </form>
         </div>
+
+        <div class="spacers col-3"></div>
     </div>
 
     <!-- JS include footer -->
