--- a/views/registration.html
+++ b/views/registration.html
@@ -18,12 +18,12 @@
     <link rel="stylesheet" href="styles/login_register_styles.css">
     <title>Workout Tracker Register</title>
 </head>
-<body>
+<body class="pl-5 pt-5 pb-5 pr-4">
     <!-- body content -->
     <div id="body-div" class="container row">
-        <div class="col-3"></div>
+        <div class="spacers col-3"></div>
 
-        <div id="form-div" class="col-4">
+        <div id="form-div" class="col-sm-12 col-md-6">
             <!-- Form -->
             <form id="formatted-login" method="post" action="#">
                 <!-- first name -->
@@ -89,6 +89,8 @@
                 <input id="register-btn" class="btn-dark" type="submit" value="Register">
             </form>
         </div>
+
+        <div class="spacers col-3"></div>
     </div>
 
     <!-- JS include footer -->
