added links to/from registeration and login pages. PP with Chad

--- a/views/registration.html
+++ b/views/registration.html
@@ -84,7 +84,11 @@
                     <input id="is-pro" name="is-pro" type="checkbox" value="pro">
                     <label for="is-pro">Upgrade to Premium Membership!</label>
                 </div>
-
+                <!-- go to login for registered users -->
+                <hr>
+                <!-- TODO: update href link -->
+                <p class="reg-log-links text-center">Already a registered user? Go to <a href="/workout/login">Login here!</a></p>
+                <hr>
                 <!-- submit button -->
                 <input id="register-btn" class="btn-dark" type="submit" value="Register">
             </form>
