updated href to FFF formatting

--- a/views/login.html
+++ b/views/login.html
@@ -49,6 +49,10 @@
                 <input id="show-password" type="checkbox" onclick="loginPasswordToggle()">
                 <label for="show-password">Show Password</label>
                 <br>
+                <!-- go to register for non-users -->
+                <hr>
+                <p class="reg-log-links text-center">Not a registered user? Go to <a href="{{ @BASE }}/register">Register here!</a></p>
+                <hr>
                 <!-- submit button -->
                 <input id="login-btn" class="btn-dark" type="submit" value="Login">
             </form>
