--- a/views/registration.html
+++ b/views/registration.html
@@ -84,9 +84,13 @@
                     <input id="is-pro" name="is-pro" type="checkbox" value="pro">
                     <label for="is-pro">Upgrade to Premium Membership!</label>
                 </div>
-
+                <!-- go to login for registered users -->
+                <hr>
+                <p class="reg-log-links text-center">Already a registered user? Go to <a href="{{ @BASE }}/login">Login here!</a></p>
+                <hr>
                 <!-- submit button -->
                 <input id="register-btn" class="btn-dark" type="submit" value="Register">
+                <hr>
             </form>
         </div>
 
