--- a/styles/login_register_styles.css
+++ b/styles/login_register_styles.css
@@ -33,6 +33,11 @@ p {
     padding-bottom: 15px;
 }
 
+.reg-log-links {
+    color: black;
+}
+
+
 @media only screen and (max-width: 600px) {
     body {
         background-image: url("../images/freeWeights2.jpg");
