--- a/views/navbar.html
+++ b/views/navbar.html
@@ -5,11 +5,15 @@
  * @author Bridget Black
  * @author Chad Drennan
  * @version 1.0
- * Last Updated: 2020-03-11
+ * Last Updated: 2020-03-14
  */
 -->
 <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Workout Tracker</a>
+    <check if="{{ @SESSION.userPremiumObj->typeOfMember() == 'premium' }}">
+        <p>{{ @SESSION.userPremiumObj->getFullName() }}</p>
+    </check>
+    
     <!-- hamburger nav -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -17,8 +21,8 @@
 
     <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto float-right">
+            <!-- Premium Perks -->
             <li class="nav-item active">
-
                     <check if='{{ @isPremium == "no" }}'>
                         <p>{{ @isPremium }}</p>
                         <true>
@@ -29,11 +33,10 @@
                         </false>
                     </check>
             </li>
+            <!-- logout -->
             <li class="nav-item active">
-                <a class="nav-link" href="/workout/login">Logout<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ @BASE }}/login">Logout<span class="sr-only">(current)</span></a>
             </li>
         </ul>
-        <!-- logout -->
-
     </div>
 </nav>
