--- a/views/navbar.html
+++ b/views/navbar.html
@@ -10,10 +10,17 @@
 -->
 <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Workout Tracker</a>
-    <check if="{{ @SESSION.userPremiumObj->typeOfMember() == 'premium' }}">
-        <p>{{ @SESSION.userPremiumObj->getFullName() }}</p>
+    <check if="{{ @SESSION.userObj->typeOfMember() == 'premium' }}">
+        <true>
+            <p id="user_db_id" class="d-none">{{ @SESSION.userObj->getID() }}</p>
+            <p class="text-white mb-0">Pro: {{ @SESSION.userObj->getFullName() }}</p>
+        </true>
+        <false>
+            <p id="user_db_id" class="d-none">{{ @SESSION.userObj->getID() }}</p>
+            <p class="text-white mb-0">{{ @SESSION.userObj->getFullName() }}</p>
+        </false>
     </check>
-    
+
     <!-- hamburger nav -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -21,18 +28,6 @@
 
     <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto float-right">
-            <!-- Premium Perks -->
-            <li class="nav-item active">
-                    <check if='{{ @isPremium == "no" }}'>
-                        <p>{{ @isPremium }}</p>
-                        <true>
-                            <a class="nav-link disabled" href="#">Premium Perks<span class="sr-only">(current)</span></a>
-                        </true>
-                        <false>
-                            <a class="nav-link" href="/login">Premium Perks<span class="sr-only">(current)</span></a>
-                        </false>
-                    </check>
-            </li>
             <!-- logout -->
             <li class="nav-item active">
                 <a class="nav-link" href="{{ @BASE }}/login">Logout<span class="sr-only">(current)</span></a>
