javascript validation complete

--- a/views/footer.html
+++ b/views/footer.html
@@ -20,6 +20,8 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     <script src="js/home.js"></script>
-    <script src="model/toggle.js"></script>
+    <script src="js/toggle.js"></script>
+    <script src="js/validation.js"></script>
+    <script src="js/login_validation.js"></script>
 </body>
 </html>
