--- a/views/registration.html
+++ b/views/registration.html
@@ -25,7 +25,7 @@
 
         <div id="form-div" class="col-sm-12 col-md-6">
             <!-- Form -->
-            <form id="formatted-login" method="post" action="#">
+            <form id="formatted-register" method="post" action="#">
                 <!-- first name -->
                 <div class="form-group row">
                     <label for="first-name" class="col-4">First Name</label>
@@ -89,7 +89,7 @@
                 <p class="reg-log-links text-center">Already a registered user? Go to <a href="{{ @BASE }}/login">Login here!</a></p>
                 <hr>
                 <!-- submit button -->
-                <input id="register-btn" class="btn-dark" type="submit" value="Register">
+                <input id="register-btn" class="btn-dark" type="submit" value="Register" onclick="validateJS()">
                 <hr>
             </form>
         </div>
