Fixed bug in premium user class for retrieving user id. Showed results from day plans query onto the view

--- a/views/home.html
+++ b/views/home.html
@@ -40,6 +40,13 @@
                         </tr>
                         </thead>
                         <tbody>
+                            <repeat group="{{ @dayPlans[@ctr - 1] }}" value="{{ @currWorkoutLog }}">
+                                <tr>
+                                    <th>{{ @currWorkoutLog['workout_name'] }}</th>
+                                    <td>{{ @currWorkoutLog['weight'] }}</td>
+                                    <td>{{ @currWorkoutLog['repetitions'] }}</td>
+                                </tr>
+                            </repeat>
                         </tbody>
                     </table>
                     <div class="card-body text-center">
