--- a/views/login.html
+++ b/views/login.html
@@ -1,22 +1,21 @@
 <!--
 /**
- * TODO: update description and file associations
- * Splash page for home screen.
+ * Login page for Workout Tracker website. If a user is already a registered user, or if they are logged out, the
+ * user will come to this page to log in and use the website.
  *
  * @author Bridget Black
  * @author Chad Drennan
  * @version 1.0
  * 2020-02-17
- * Last Updated: 2020-03-03
+ * Last Updated: 2020-03-15
  * File Name: login.html
- * File Associations:
  */
 -->
 
 <!-- CSS include header -->
 <include href="/views/header.html"></include>
 
-    <!-- CSS -->
+    <!-- CSS login styles -->
     <link rel="stylesheet" href="styles/login_register_styles.css">
     <title>Workout Tracker Login</title>
 </head>
