--- a/views/registration.html
+++ b/views/registration.html
@@ -1,20 +1,20 @@
 <!--
 /**
- * TODO: update description and file associations
- * Splash page for home screen.
+ * Registration page for Workout Tracker website. New users register here with a unique username, and are then routed
+ * to the home page.
  *
  * @author Bridget Black
  * @author Chad Drennan
  * @version 1.0
  * 2020-02-17
- * Last Updated: 2020-03-13
+ * Last Updated: 2020-03-15
  */
 -->
 
 <!-- CSS include header -->
 <include href="/views/header.html"></include>
 
-    <!-- CSS -->
+    <!-- CSS register styles -->
     <link rel="stylesheet" href="styles/login_register_styles.css">
     <title>Workout Tracker Register</title>
 </head>
