--- a/styles/home.css
+++ b/styles/home.css
@@ -1,26 +1,41 @@
+/**
+ * CSS overrides for the home page of Workout Tracker.
+ *
+ * @author Chad Drennan
+ * @author Bridget Black
+ * @version 1.0
+ * Last updated: 2020-03-15
+ */
+
+/* applied to all elements in home page */
 * {
     box-sizing: border-box;
 }
 
+/* blue circle 'add' buttons on cards */
 a.rounded-circle {
     font-size: 20px;
     width: 52px;
     padding: 10px;
 }
 
+/* card style */
 .card {
     min-width: 193px;
 }
 
+/* card style */
 .card > .list-group {
     padding: 0 8px;
 }
 
+/* card style */
 .card-header {
     text-align: center;
     padding: 12px;
 }
 
+/* grid card placement */
 #day-plans {
     display: grid;
     grid-template-columns: repeat(6, auto);
@@ -29,34 +44,42 @@ a.rounded-circle {
                          'day-1 day-2 day-3 day-4 day-5 day-6';
 }
 
+/* card placement for griding */
 #day-0 {
     grid-area: day-0;
 }
 
+/* card placement for griding */
 #day-1 {
     grid-area: day-1;
 }
 
+/* card placement for griding */
 #day-2 {
     grid-area: day-2;
 }
 
+/* card placement for griding */
 #day-3 {
     grid-area: day-3;
 }
 
+/* card placement for griding */
 #day-4 {
     grid-area: day-4;
 }
 
+/* card placement for griding */
 #day-5 {
     grid-area: day-5;
 }
 
+/* card placement for griding */
 #day-6 {
     grid-area: day-6;
 }
 
+/* grid workout placement */
 #workout-options {
     display: grid;
     grid-template-columns: auto auto auto auto;
@@ -77,10 +100,6 @@ a.rounded-circle {
         grid-template-columns: auto auto;
         grid-template-areas: 'day-0 day-0' 'day-1 day-2' 'day-3 day-4' 'day-5 day-6';
     }
-}
-
-/* Large devices (desktops, 992px) */
-@media (max-width: 992px) {
 }
 
 /* Extra large devices (large desktops, 1200px) */
