--- a/views/navbar.html
+++ b/views/navbar.html
@@ -5,11 +5,12 @@
  * @author Bridget Black
  * @author Chad Drennan
  * @version 1.0
- * Last Updated: 2020-03-14
+ * Last Updated: 2020-03-15
  */
 -->
 <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Workout Tracker</a>
+    <!-- display user's name and if they're premium give them a title -->
     <check if="{{ @SESSION.userObj->typeOfMember() == 'premium' }}">
         <true>
             <p id="user_db_id" class="d-none">{{ @SESSION.userObj->getID() }}</p>
@@ -25,7 +26,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-
+    <!-- hamburger nav content -->
     <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto float-right">
             <!-- logout -->
