updated login and registration screens with h1 titles

--- a/views/login.html
+++ b/views/login.html
@@ -25,6 +25,7 @@
         <div class="spacers col-3"></div>
 
         <div id="form-div" class="col-sm-12 col-md-6">
+            <h1 class="justify-content-center text-center mt-3 bg-dark text-white p-2">Login</h1>
             <!-- Formatted Username input field -->
             <form id="formatted-login" method="post" action="#">
                 <!-- username -->
