--- a/views/registration.html
+++ b/views/registration.html
@@ -24,6 +24,7 @@
         <div class="spacers col-3"></div>
 
         <div id="form-div" class="col-sm-12 col-md-6">
+            <h1 class="justify-content-center text-center mt-3 bg-dark text-white p-2">Register</h1>
             <!-- Form -->
             <form id="formatted-register" method="post" action="#">
                 <!-- first name -->
