--- a/views/home.html
+++ b/views/home.html
@@ -63,7 +63,7 @@
                            data-day-num="{{ @ctr - 1 }}">
                             ➕
                         </a>
-                        <a href="#" class="btn btn-primary rounded-circle" id="delete-mode"
+                        <a href="#" class="btn btn-primary rounded-circle delete-mode"
                            data-day-num="{{ @ctr - 1 }}">
                             ❌️
                         </a>
