--- a/styles/home.css
+++ b/styles/home.css
@@ -86,6 +86,13 @@ a.rounded-circle {
     grid-gap: 10px;
 }
 
+/* Very small devices remove user's name from navbar */
+@media (max-width: 400px) {
+    #full-name {
+        display: none;
+    }
+}
+
 /* Small devices (landscape phones, 576px)*/
 @media (max-width: 576px) {
     body > main > #day-plans {
