--- a/views/navbar.html
+++ b/views/navbar.html
@@ -14,11 +14,11 @@
     <check if="{{ @SESSION.userObj->typeOfMember() == 'premium' }}">
         <true>
             <p id="user_db_id" class="d-none">{{ @SESSION.userObj->getID() }}</p>
-            <p class="text-white mb-0">Pro: {{ @SESSION.userObj->getFullName() }}</p>
+            <p id="full-name" class="text-white mb-0">Pro: {{ @SESSION.userObj->getFullName() }}</p>
         </true>
         <false>
             <p id="user_db_id" class="d-none">{{ @SESSION.userObj->getID() }}</p>
-            <p class="text-white mb-0">{{ @SESSION.userObj->getFullName() }}</p>
+            <p id="full-name" class="text-white mb-0">{{ @SESSION.userObj->getFullName() }}</p>
         </false>
     </check>
 
@@ -29,6 +29,10 @@
     <!-- hamburger nav content -->
     <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto float-right">
+            <!-- Premium Perks -->
+            <li>
+                <a href="#" class="btn btn-dark pr-0" data-toggle="modal" data-target="#suggestion-modal">Premium Perks</a>
+            </li>
             <!-- logout -->
             <li class="nav-item active">
                 <a class="nav-link" href="{{ @BASE }}/login">Logout<span class="sr-only">(current)</span></a>
