--- a/views/login.html
+++ b/views/login.html
@@ -26,6 +26,7 @@
 
         <div id="form-div" class="col-sm-12 col-md-6">
             <h1 class="justify-content-center text-center mt-3 bg-dark text-white p-2">Login</h1>
+            <p class="reg-log-links"><small>* All fields are required, use only A-Z, a-z, or 0-9</small></p>
             <!-- Formatted Username input field -->
             <form id="formatted-login" method="post" action="#">
                 <!-- username -->
