--- a/views/registration.html
+++ b/views/registration.html
@@ -25,6 +25,7 @@
 
         <div id="form-div" class="col-sm-12 col-md-6">
             <h1 class="justify-content-center text-center mt-3 bg-dark text-white p-2">Register</h1>
+            <p class="reg-log-links"><small>* All fields are required, use only A-Z, a-z, or 0-9</small></p>
             <!-- Form -->
             <form id="formatted-register" method="post" action="#">
                 <!-- first name -->
