--- a/views/navbar.html
+++ b/views/navbar.html
@@ -29,6 +29,12 @@
     <!-- hamburger nav content -->
     <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto float-right">
+            <check if="{{ @SESSION.userObj->typeOfMember() == 'premium' }}">
+                <!-- Premium Perks -->
+                <li class="nav-item active">
+                    <a href="#" class="nav-link" data-toggle="modal" data-target="#suggestion-modal">Suggestions</a>
+                </li>
+            </check>
             <!-- logout -->
             <li class="nav-item active">
                 <a class="nav-link" href="{{ @BASE }}/login">Logout<span class="sr-only">(current)</span></a>
