--- a/styles/home.css
+++ b/styles/home.css
@@ -13,7 +13,7 @@
 }
 
 /* blue circle 'add' buttons on cards */
-a.rounded-circle {
+.rounded-circle {
     font-size: 20px;
     width: 52px;
     padding: 10px;
